Fix miss on mobile styling

--- a/app/containers/ForecastContainer/styles.less
+++ b/app/containers/ForecastContainer/styles.less
@@ -1,4 +1,7 @@
 .forecastHeader {
+  @media (max-width: 575px) {
+    position: relative;
+  }
   @media (min-width: 992px) {
     position: relative;
   }
